tried to re add background

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@ body {
   font-size: 18px;
   line-height: 120%;
   color: #333;
+  background-image: https://images2.alphacoders.com/112/thumbbig-1124353.webp;
 }
 
 header {
