--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,7 @@ header {
 }
 
 body {
-  background: #efeee7;
+  background-image: https://images2.alphacoders.com/112/thumbbig-1124353.webp;
   padding: 20px;
   font-family: Arial;
 }
